fixed alignment of mat-form-field

--- a/src/app/components/users-view/users-table/users-table.component.scss
+++ b/src/app/components/users-view/users-table/users-table.component.scss
@@ -3,4 +3,8 @@ table {
   mat-form-field {
     display: initial;
   }
+
+  td.align-vertical-center {
+    padding-top: 22px;
+  }
 }
